Fix comments list user avatar getting squished

--- a/client/src/UserList/style.scss
+++ b/client/src/UserList/style.scss
@@ -12,6 +12,7 @@
 		align-self: center;
 		margin-left: 10px;
 		color: white;
+		flex: 1;
 
 		.user-username {
 			font-size: 15px;
